--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello Climbpass!
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>CLIMBPASS<title>
+</head>
+<body>
+  <h1>Hello Climbpass!</h1>
+  <footer>2019</footer>
+</body>
+</html>
