--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>CLIMBPASS<title>
+  <title>CLIMBPASS</title>
 </head>
 <body>
   <h1>Hello Climbpass!</h1>
