--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 
     <!--Page Title-->
-    <title>Namari - Free Landing Page Template</title>
+    <title>Climbpass</title>
 
     <!--Meta Keywords and Description-->
     <meta name="keywords" content="">
@@ -73,29 +73,29 @@
 
                         <!--Social Icons in Header-->
                         <ul class="social-icons">
-                            <li>
+                            <!-- <li>
                                 <a target="_blank" title="Facebook" href="https://www.facebook.com/username">
                                     <i class="fa fa-facebook fa-1x"></i><span>Facebook</span>
                                 </a>
-                            </li>
-                            <li>
+                            </li> -->
+                            <!-- <li>
                                 <a target="_blank" title="Google+" href="http://google.com/+username">
                                     <i class="fa fa-google-plus fa-1x"></i><span>Google+</span>
                                 </a>
-                            </li>
-                            <li>
+                            </li> -->
+                            <!-- <li>
                                 <a target="_blank" title="Twitter" href="http://www.twitter.com/username">
                                     <i class="fa fa-twitter fa-1x"></i><span>Twitter</span>
                                 </a>
-                            </li>
+                            </li> -->
                             <li>
                                 <a target="_blank" title="Instagram" href="http://www.instagram.com/username">
                                     <i class="fa fa-instagram fa-1x"></i><span>Instagram</span>
                                 </a>
                             </li>
                             <li>
-                                <a target="_blank" title="behance" href="http://www.behance.net">
-                                    <i class="fa fa-behance fa-1x"></i><span>Behance</span>
+                                <a target="_blank" title="behance" href="mailto: climbpass@gmail.com">
+                                    <i class="fa fa-at fa-1x"></i><span>Email</span>
                                 </a>
                             </li>
                         </ul>
@@ -113,19 +113,16 @@
                                 <a href="#about">About</a>
                             </li>
                             <li>
-                                <a href="#gallery">Gallery</a>
+                                <a href="#services">Services</a>
                             </li>
                             <li>
-                                <a href="#services">Services</a>
+                                <a href="#partners">Partners</a>
                             </li>
                             <li>
                                 <a href="#testimonials">Testimonials</a>
                             </li>
                             <li>
-                                <a href="#clients">Clients</a>
-                            </li>
-                            <li>
-                                <a href="#pricing">Pricing</a>
+                                <a href="#team">Team</a>
                             </li>
                         </ul>
                     </nav>
@@ -144,13 +141,14 @@
             <div class="col-38">
 
                 <div class="section-heading">
-                    <h1>A FREE AND SIMPLE LANDING PAGE</h1>
+                    <h1>SOMETHING ATTN GRABING HERE</h1>
                     <h2>Namari is a free landing page template you can use for your projects. It is free to use for your
                         personal and commercial projects, enjoy!</h2>
                 </div>
 
                 <!--Call to Action-->
-                <a href="#" class="button">START CREATING TODAY</a>
+                <!-- WIP -->
+                <a href="#" class="button">Checkout our pilot program today!</a>
                 <!--End Call to Action-->
 
             </div>
@@ -248,7 +246,7 @@
 
 
         <!--Gallery-->
-        <aside id="gallery" class="row text-center scrollto clearfix" data-featherlight-gallery
+        <!-- <aside id="gallery" class="row text-center scrollto clearfix" data-featherlight-gallery
                  data-featherlight-filter="a">
 
                 <a href="images/gallery-images/gallery-image-1.jpg" data-featherlight="image" class="col-3 wow fadeIn"
@@ -264,7 +262,7 @@
                 <a href="images/gallery-images/gallery-image-6.jpg" data-featherlight="image" class="col-3 wow fadeIn"
                    data-wow-delay="0.7s"><img src="images/gallery-images/gallery-image-6.jpg" alt="Landing Page"/></a>
 
-        </aside>
+        </aside> -->
         <!--End of Gallery-->
 
 
@@ -322,53 +320,63 @@
         </div>
         <!--End of Content Section-->
 
-        <!--Testimonials-->
-        <aside id="testimonials" class="scrollto text-center" data-enllax-ratio=".2">
+        <!--Team-->
+        <aside id="team" class="scrollto text-center" data-enllax-ratio=".2">
 
             <div class="row clearfix">
 
                 <div class="section-heading">
-                    <h3>FEEDBACK</h3>
-                    <h2 class="section-title">What our customers are saying</h2>
+                    <h3>subtitle here</h3>
+                    <h2 class="section-title">MEET THE TEAM</h2>
                 </div>
 
-                <!--User Testimonial-->
-                <blockquote class="col-3 testimonial classic">
-                    <img src="images/user-images/user-1.jpg" alt="User"/>
+                <!--Team member 1-->
+                <blockquote class="col-4 team-member classic">
+                    <img src="images/team-images/team-1.jpg" alt="Ernest"/>
                     <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore
                         et dolore magna aliqua</q>
-                    <footer>John Doe - Happy Customer</footer>
+                    <footer>Ernest Teh - Business Development</footer>
                 </blockquote>
-                <!-- End of Testimonial-->
+                <!-- End of Team Member-->
 
-                <!--User Testimonial-->
-                <blockquote class="col-3 testimonial classic">
-                    <img src="images/user-images/user-2.jpg" alt="User"/>
+                <!--Team member 2-->
+                <blockquote class="col-4 team-member classic">
+                    <img src="images/team-images/team-2.jpg" alt="Nigel"/>
                     <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore
                         et dolore magna aliqua</q>
-                    <footer>Roslyn Doe - Happy Customer</footer>
+                    <footer>Nigel Cheong - Legal & Finance</footer>
                 </blockquote>
-                <!-- End of Testimonial-->
+                <!-- End of Team Member-->
 
-                <!--User Testimonial-->
-                <blockquote class="col-3 testimonial classic">
-                    <img src="images/user-images/user-3.jpg" alt="User"/>
+                <!--Team member 3-->
+                <blockquote class="col-4 team-member classic">
+                    <img src="images/team-images/team-3.jpg" alt="Yanshiang"/>
                     <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore
                         et dolore magna aliqua</q>
-                    <footer>Thomas Doe - Happy Customer</footer>
+                    <footer>Yeap Yan Shiang - Product Analytics</footer>
                 </blockquote>
-                <!-- End of Testimonial-->
+                <!-- End of Team Member-->
+
+                <!--Team member 4-->
+                <blockquote class="col-4 team-member classic">
+                    <img src="images/team-images/team-4.jpg" alt="Jiachen"/>
+                    <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua</q>
+                    <footer>Liow Jia Chen - Teah Lead</footer>
+                </blockquote>
+                <!-- End of Team Member-->
 
             </div>
 
         </aside>
-        <!--End of Testimonials-->
+        <!--End of Team-->
 
         <!--Clients-->
-        <section id="clients" class="scrollto clearfix">
+        <!-- <section id="clients" class="scrollto clearfix">
             <div class="row clearfix">
 
                 <div class="col-3">
@@ -503,7 +511,7 @@
 
             </div>
         </section>
-        <!--End of Pricing Tables-->
+        End of Pricing Tables -->
 
     </main>
     <!--End Main Content Area-->
