--- a/index.html
+++ b/index.html
@@ -311,7 +311,8 @@
                 <!--End Content Right Side-->
 
                 <div class="col-3">
-                    <img src="images/dancer.jpg" alt="Dancer"/>
+                    <!-- LOAD TIME TOO LONG -->
+                    <!--<img src="images/dancer.jpg" alt="Dancer"/>-->
                 </div>
 
             </div>
