--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <!--Introduction-->
         <section id="about" class="introduction scrollto">
 
-            <div class="row clearfix">
+            <div class="row no-padding-bottom clearfix">
 
                 <div class="col-3">
                     <div class="section-heading">
@@ -235,9 +235,7 @@
                         </div>
                     </div>
                     <!--End of Icon Block-->
-
                 </div>
-
             </div>
 
 
@@ -271,7 +269,6 @@
 
             <div class="row no-padding-bottom clearfix">
 
-
                 <!--Content Left Side-->
                 <div class="col-3">
                     <!--User Testimonial-->
@@ -282,7 +279,6 @@
                         <footer>— John Doe, Happy Customer</footer>
                     </blockquote>
                     <!-- End of Testimonial-->
-
                 </div>
                 <!--End Content Left Side-->
 
