--- a/index.html
+++ b/index.html
@@ -113,13 +113,10 @@
                                 <a href="#about">About</a>
                             </li>
                             <li>
-                                <a href="#services">Services</a>
+                                <a href="#services">Our Story</a>
                             </li>
                             <li>
                                 <a href="#partners">Partners</a>
-                            </li>
-                            <li>
-                                <a href="#testimonials">Testimonials</a>
                             </li>
                             <li>
                                 <a href="#team">Team</a>
