--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 
         <!--Partners-->
         <section id="partners" class="scrollto clearfix">
-            <div class="row clearfix">
+            <div class="row no-padding-bottom clearfix">
 
                 <div class="col-3">
 
