--- a/index.html
+++ b/index.html
@@ -73,21 +73,16 @@
 
                         <!--Social Icons in Header-->
                         <ul class="social-icons">
-                            <!-- <li>
-                                <a target="_blank" title="Facebook" href="https://www.facebook.com/username">
+                            <li>
+                                <a target="_blank" title="Facebook" href="https://www.facebook.com/climbpass">
                                     <i class="fa fa-facebook fa-1x"></i><span>Facebook</span>
                                 </a>
-                            </li> -->
-                            <!-- <li>
-                                <a target="_blank" title="Google+" href="http://google.com/+username">
-                                    <i class="fa fa-google-plus fa-1x"></i><span>Google+</span>
+                            </li>
+                            <li>
+                                <a target="_blank" title="Telegram" href="https://t.me/climbjios">
+                                    <i class="fa fa-telegram fa-1x"></i><span>ClimbJios</span>
                                 </a>
-                            </li> -->
-                            <!-- <li>
-                                <a target="_blank" title="Twitter" href="http://www.twitter.com/username">
-                                    <i class="fa fa-twitter fa-1x"></i><span>Twitter</span>
-                                </a>
-                            </li> -->
+                            </li>
                             <li>
                                 <a target="_blank" title="Instagram" href="http://www.instagram.com/climbpass">
                                     <i class="fa fa-instagram fa-1x"></i><span>Instagram</span>
@@ -439,18 +434,28 @@
         <div class="row clearfix">
 
             <!--Social Icons in Footer-->
-            <ul class="col-2 social-icons">
-                <li>
-                    <a target="_blank" title="Instagram" href="http://www.instagram.com/climbpass">
-                        <i class="fa fa-instagram fa-1x"></i><span>Instagram</span>
-                    </a>
-                </li>
-                <li>
-                    <a target="_blank" title="behance" href="mailto: climbpass@gmail.com">
-                        <i class="fa fa-at fa-1x"></i><span>Email</span>
-                    </a>
-                </li>
-            </ul>
+            <ul class="social-icons">
+                            <li>
+                                <a target="_blank" title="Facebook" href="https://www.facebook.com/climbpass">
+                                    <i class="fa fa-facebook fa-1x"></i><span>Facebook</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a target="_blank" title="Telegram" href="https://t.me/climbjios">
+                                    <i class="fa fa-telegram fa-1x"></i><span>ClimbJios</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a target="_blank" title="Instagram" href="http://www.instagram.com/climbpass">
+                                    <i class="fa fa-instagram fa-1x"></i><span>Instagram</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a target="_blank" title="behance" href="mailto: climbpass@gmail.com">
+                                    <i class="fa fa-at fa-1x"></i><span>Email</span>
+                                </a>
+                            </li>
+                        </ul>
             <!--End of Social Icons in Footer-->
         </div>
     </footer>
