--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 
     <!--Page Title-->
-    <title>Climbpass</title>
+    <title>ClimbPass</title>
 
     <!--Meta Keywords and Description-->
     <meta name="keywords" content="">
@@ -134,7 +134,7 @@
 
                 <div class="section-heading">
                     <h1>SOMETHING ATTN GRABING HERE</h1>
-                    <h2>Namari is a free landing page template you can use for your projects. It is free to use for your
+                    <h2>ClimbPass is a the super climbing platform for cheaper passes and match with fellow climbers. It is free to use for your
                         personal and commercial projects, enjoy!</h2>
                 </div>
 
@@ -159,7 +159,7 @@
                 <div class="col-3">
                     <div class="section-heading">
                         <h3>SUCCESS</h3>
-                        <h2 class="section-title">How We Help You To Sell Your Product</h2>
+                        <h2 class="section-title">How ClimbPass helps</h2>
                         <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
                     </div>
