--- a/index.html
+++ b/index.html
@@ -133,14 +133,13 @@
             <div class="col-38">
 
                 <div class="section-heading">
-                    <h1>SOMETHING ATTN GRABING HERE</h1>
-                    <h2>ClimbPass is a the super climbing platform for cheaper passes and match with fellow climbers. It is free to use for your
-                        personal and commercial projects, enjoy!</h2>
+                    <h1>CHEAPER CLIMBING PASSES</h1>
+                    <h2>ClimbPass is a the super climbing platform for cheaper passes and match with fellow climbers. </h2>
                 </div>
 
                 <!--Call to Action-->
                 <!-- WIP -->
-                <a href="#" class="button">Checkout our pilot program today!</a>
+                <a href="#" class="button">Book your off-peak passes with us today!</a>
                 <!--End Call to Action-->
 
             </div>
@@ -159,9 +158,9 @@
                 <div class="col-3">
                     <div class="section-heading">
                         <h3>SUCCESS</h3>
-                        <h2 class="section-title">How ClimbPass helps</h2>
-                        <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
+                        <h2 class="section-title">About ClimbPass</h2>
+                        <p class="section-subtitle">ClimbPass is a climbing based platform, for climbers by climbers, and enables climbing to be more
+                        accessible to the masses.</p>
                     </div>
 
                 </div>
@@ -176,9 +175,8 @@
                         </div>
                         <!--Icon Block Description-->
                         <div class="icon-block-description">
-                            <h4>HTML5 &amp; CSS3</h4>
-                            <p>Has ne tritani atomorum conclusionemque, in dolorum volumus cotidieque eum. At vis choro
-                                neglegentur iudico</p>
+                            <h4>Offpeak Passes</h4>
+                            <p>Cheaper day passes up to 50% during off-peak hours, for weekdays and weekends.</p>
                         </div>
                     </div>
                     <!--End of Icon Block-->
@@ -191,9 +189,8 @@
                         </div>
                         <!--Icon Block Description-->
                         <div class="icon-block-description">
-                            <h4>Easy to Use</h4>
-                            <p>Cu vero ipsum vim, doctus facilisi sea in. Eam ex falli honestatis repudiandae, sit
-                                detracto mediocrem disputationi</p>
+                            <h4>Climb with a friend</h4>
+                            <p>Can't find anyone to climb with? Climbing is a social sport and we help you match with a fellow climber</p>
                         </div>
                     </div>
                     <!--End of Icon Block-->
@@ -206,9 +203,8 @@
                         </div>
                         <!--Icon Block Description-->
                         <div class="icon-block-description">
-                            <h4>Fully Responsive</h4>
-                            <p>Id porro tritani recusabo usu, eum intellegam consequuntur et. Fugit debet ea sit, an pro
-                                nemore vivendum</p>
+                            <h4>Marketplace</h4>
+                            <p>Got some extra climbing equipment you don't need? Or spare multipasses you can't finish using. List them on our platform.</p>
                         </div>
                     </div>
                     <!--End of Icon Block-->
@@ -221,9 +217,8 @@
                         </div>
                         <!--Icon Block Description-->
                         <div class="icon-block-description">
-                            <h4>Parallax Effect</h4>
-                            <p>Id porro tritani recusabo usu, eum intellegam consequuntur et. Fugit debet ea sit, an pro
-                                nemore vivendum</p>
+                            <h4>Community</h4>
+                            <p>Looking for friends to climb with? Join ClimbJios on telegram!</p>
                         </div>
                     </div>
                     <!--End of Icon Block-->
