--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
                 <!--Call to Action-->
                 <!-- WIP -->
-                <a href="#" class="button">Book your off-peak passes with us today!</a>
+                <a href="#" class="button">Book your CimbPass now!</a>
                 <!--End Call to Action-->
 
             </div>
