--- a/index.html
+++ b/index.html
@@ -250,7 +250,6 @@
         </aside> -->
         <!--End of Gallery-->
 
-
         <!--Content Section-->
         <div id="services" class="scrollto clearfix">
 
@@ -294,12 +293,10 @@
                 <!--End Content Right Side-->
 
                 <div class="col-3">
-                    <!-- LOAD TIME TOO LONG -->
                     <img src="images/dancer.jpg" alt="Dancer"/>
                 </div>
 
             </div>
-
 
         </div>
         <!--End of Content Section-->
@@ -322,19 +319,19 @@
 
                 <div class="col-2-3">
 
-                    <a href="#" class="col-3">
-                        <img src="images/company-images/company-logo1.png" alt="Company"/>
-                        <div class="client-overlay"><span>Tree</span></div>
+                    <a href="http://t-hall.sg/" class="col-2">
+                        <img src="images/partner-images/company-logo1.png" alt="T-Hall"/>
+                        <!-- <div class="client-overlay"><span>Tree</span></div> -->
                     </a>
-                    <a href="#" class="col-3">
-                        <img src="images/company-images/company-logo2.png" alt="Company"/>
-                        <div class="client-overlay"><span>Fingerprint</span></div>
+                    <a href="http://climberslaboratory.com.sg/" class="col-2">
+                        <img src="images/partner-images/company-logo2.png" alt="Climbers Lab"/>
+                        <!-- <div class="client-overlay"><span>Fingerprint</span></div> -->
                     </a>
-                    <a href="#" class="col-3">
-                        <img src="images/company-images/company-logo3.png" alt="Company"/>
+                    <a style ="background-color: lightblue;"  href="http://www.boulderm.com/" class="col-2">
+                        <img src="images/partner-images/company-logo3.png" alt="Boulder Movement"/>
                         <div class="client-overlay"><span>The Man</span></div>
                     </a>
-                    <a href="#" class="col-3">
+                    <!-- <a href="#" class="col-3">
                         <img src="images/company-images/company-logo4.png" alt="Company"/>
                         <div class="client-overlay"><span>Mustache</span></div>
                     </a>
@@ -358,7 +355,7 @@
                     <a href="#" class="col-3">
                         <img src="images/company-images/company-logo9.png" alt="Company"/>
                         <div class="client-overlay"><span>Cold</span></div>
-                    </a>
+                    </a> -->
 
                 </div>
 
