--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>ClimbPass</title>
 
     <!--Meta Keywords and Description-->
-    <meta name="keywords" content="">
-    <meta name="description" content="">
+    <meta name="keywords" content="ClimbPass">
+    <meta name="description" content="ClimbPass is a the super climbing platform for cheaper passes and match with fellow climbers.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
 
     <!--Favicon-->
@@ -218,11 +218,38 @@
                         <!--Icon Block Description-->
                         <div class="icon-block-description">
                             <h4>Community</h4>
-                            <p>Looking for friends to climb with? Join ClimbJios on telegram!</p>
+                            <p>Looking for friends to climb with? <a target="=blank" href="https://t.me/climbjios" >Join ClimbJios on telegram!</a></p>
                         </div>
                     </div>
                     <!--End of Icon Block-->
-                </div>
+
+                    <!--Icon Block-->
+                    <div class="col-1 icon-block icon-top wow fadeInUp" data-wow-delay="0.5s">
+                        <!--Icon-->
+                        <div class="icon">
+                            <i class="fa fa-tablet fa-2x"></i>
+                        </div>
+                        <!--Icon Block Description-->
+                        <div class="icon-block-description">
+                            <h4>Less crowded gyms</h4>
+                            <p>Skip the crowd! We offer passes during off peak hours so that you'll have more space to yourself </p>
+                        </div>
+                    </div>
+                    <!--End of Icon Block-->
+
+                    <!--Icon Block-->
+                    <div class="col-1 icon-block icon-top wow fadeInUp" data-wow-delay="0.5s">
+                        <!--Icon-->
+                        <div class="icon">
+                            <i class="fa fa-tablet fa-2x"></i>
+                        </div>
+                        <!--Icon Block Description-->
+                        <div class="icon-block-description">
+                            <h4>Dynamic discounted pricing</h4>
+                            <p>Passes are sold based on a dynamic pricing model, with prices going as low as 50% off its original prices</p>
+                        </div>
+                    </div>
+                    <!--End of Icon Block-->
             </div>
 
 
@@ -293,7 +320,7 @@
                 <!--End Content Right Side-->
 
                 <div class="col-3">
-                    <img src="images/dancer.jpg" alt="Dancer"/>
+                    <!-- <img src="images/dancer.jpg" alt="Dancer"/> -->
                 </div>
 
             </div>
@@ -321,15 +348,12 @@
 
                     <a href="http://t-hall.sg/" class="col-2">
                         <img src="images/partner-images/company-logo1.png" alt="T-Hall"/>
-                        <!-- <div class="client-overlay"><span>Tree</span></div> -->
                     </a>
                     <a href="http://climberslaboratory.com.sg/" class="col-2">
                         <img src="images/partner-images/company-logo2.png" alt="Climbers Lab"/>
-                        <!-- <div class="client-overlay"><span>Fingerprint</span></div> -->
                     </a>
-                    <a style ="background-color: lightblue;"  href="http://www.boulderm.com/" class="col-2">
+                    <a href="http://www.boulderm.com/" class="col-2">
                         <img src="images/partner-images/company-logo3.png" alt="Boulder Movement"/>
-                        <div class="client-overlay"><span>The Man</span></div>
                     </a>
                     <!-- <a href="#" class="col-3">
                         <img src="images/company-images/company-logo4.png" alt="Company"/>
