--- a/index.html
+++ b/index.html
@@ -298,24 +298,33 @@
                 <!--Content of the Right Side-->
                 <div class="col-3">
                     <div class="section-heading">
-                        <h3>BELIEVING</h3>
-                        <h2 class="section-title">Focusing On What Matters Most</h2>
-                        <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
+                        <h3>OUR STORY</h3>
+                        <h2 class="section-title">How It All Started</h2>
+
+                        
+                        <!-- <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p> -->
                     </div>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
-                        totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
-                        dicta sunt explicabo.
+                    <p>When climbing breakneck ridge in Cold Spring, New York, Ernest had a taste of what real rock climbing was, 
+                        though he had never tried climbing before. He was on fours, trying to climb over rocks, 
+                        in order to get to the summit. He fell in love with it, and continued to pursue indoor 
+                        climbing at gyms such as Brooklyn Boulders and Steep Rock.
                     </p>
                     <p>
-                        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-                        consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
-                        Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet!
+                        Upon coming back to Singapore, Ernest realised then climbing was very expensive. The cheapest way to climb, 
+                        was to get a season pass, but that meant that he was stuck to one gym, 
+                        when all he wanted to do was climb anywhere, anytime.
+                    </p>
+
+                    <p>
+                        Hence, ClimbPass was born, a climbing platform to allow climbers to access more gyms at the same price, 
+                        and also introduce climbing to non-climbers.
                     </p>
                     <!-- Just replace the Video ID "UYJ5IjBRlW8" with the ID of your video on YouTube (Found within the URL) -->
-                    <a href="#" data-videoid="UYJ5IjBRlW8" data-videosite="youtube" class="button video link-lightbox">
+                    <!--DO WE HAVE A VIDEO-->
+                    <!-- <a href="#" data-videoid="UYJ5IjBRlW8" data-videosite="youtube" class="button video link-lightbox">
                         WATCH VIDEO <i class="fa fa-play" aria-hidden="true"></i>
-                    </a>
+                    </a> -->
                 </div>
                 <!--End Content Right Side-->
 
@@ -400,9 +409,8 @@
                 <!--Team member 1-->
                 <blockquote class="col-4 team-member classic">
                     <img src="images/team-images/team-1.jpg" alt="Ernest"/>
-                    <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua</q>
+                    <q>When I’m not at a wall, I’m usually hunting for the best third wave coffees, 
+                        preferably bright and acidic, in white-washed </q>
                     <footer>Ernest Teh - Business Development</footer>
                 </blockquote>
                 <!-- End of Team Member-->
@@ -410,9 +418,9 @@
                 <!--Team member 2-->
                 <blockquote class="col-4 team-member classic">
                     <img src="images/team-images/team-2.jpg" alt="Nigel"/>
-                    <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua</q>
+                    <q>Enigmatic, pragmatic and most importantly, enthusiastic. Nigel is all about doing business 
+                        effectively and efficiently, getting things done in a manner which avoids all unnecessary 
+                        troubles through application of his relevant legal knowledge.</q>
                     <footer>Nigel Cheong - Legal & Finance</footer>
                 </blockquote>
                 <!-- End of Team Member-->
@@ -430,9 +438,7 @@
                 <!--Team member 4-->
                 <blockquote class="col-4 team-member classic">
                     <img src="images/team-images/jiachen.jpg" alt="Jiachen"/>
-                    <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua</q>
+                    <q>I love building and making complex systems with real world impact! Im also in love with coffee and I hate javascript so much.</q>
                     <footer>Liow Jia Chen - Teah Lead</footer>
                 </blockquote>
                 <!-- End of Team Member-->
