--- a/index.html
+++ b/index.html
@@ -166,7 +166,6 @@
                 </div>
 
                 <div class="col-2-3">
-
                     <!--Icon Block-->
                     <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.1s">
                         <!--Icon-->
@@ -175,28 +174,28 @@
                         </div>
                         <!--Icon Block Description-->
                         <div class="icon-block-description">
-                            <h4>Offpeak Passes</h4>
-                            <p>Cheaper day passes up to 50% during off-peak hours, for weekdays and weekends.</p>
+                            <h4>Dynamic discounted pricing</h4>
+                            <p>Using a dynamic pricing model, prices go as low as 50% off its original prices</p>
+                        </div>
+                    </div>
+                    <!--End of Icon Block-->
+
+                    <!--Icon Block-->
+                    <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.2s">
+                        <!--Icon-->
+                        <div class="icon">
+                            <i class="fa fa-tablet fa-2x"></i>
+                        </div>
+                        <!--Icon Block Description-->
+                        <div class="icon-block-description">
+                            <h4>Less crowded gyms</h4>
+                            <p>Skip the crowd! We offer passes during off peak hours so that you'll have more space to yourself.</p>
                         </div>
                     </div>
                     <!--End of Icon Block-->
 
                     <!--Icon Block-->
                     <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.3s">
-                        <!--Icon-->
-                        <div class="icon">
-                            <i class="fa fa-bolt fa-2x"></i>
-                        </div>
-                        <!--Icon Block Description-->
-                        <div class="icon-block-description">
-                            <h4>Climb with a friend</h4>
-                            <p>Can't find anyone to climb with? Climbing is a social sport and we help you match with a fellow climber</p>
-                        </div>
-                    </div>
-                    <!--End of Icon Block-->
-
-                    <!--Icon Block-->
-                    <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.5s">
                         <!--Icon-->
                         <div class="icon">
                             <i class="fa fa-tablet fa-2x"></i>
@@ -219,34 +218,6 @@
                         <div class="icon-block-description">
                             <h4>Community</h4>
                             <p>Looking for friends to climb with? <a target="=blank" href="https://t.me/climbjios" >Join ClimbJios on telegram!</a></p>
-                        </div>
-                    </div>
-                    <!--End of Icon Block-->
-
-                    <!--Icon Block-->
-                    <div class="col-1 icon-block icon-top wow fadeInUp" data-wow-delay="0.5s">
-                        <!--Icon-->
-                        <div class="icon">
-                            <i class="fa fa-tablet fa-2x"></i>
-                        </div>
-                        <!--Icon Block Description-->
-                        <div class="icon-block-description">
-                            <h4>Less crowded gyms</h4>
-                            <p>Skip the crowd! We offer passes during off peak hours so that you'll have more space to yourself </p>
-                        </div>
-                    </div>
-                    <!--End of Icon Block-->
-
-                    <!--Icon Block-->
-                    <div class="col-1 icon-block icon-top wow fadeInUp" data-wow-delay="0.5s">
-                        <!--Icon-->
-                        <div class="icon">
-                            <i class="fa fa-tablet fa-2x"></i>
-                        </div>
-                        <!--Icon Block Description-->
-                        <div class="icon-block-description">
-                            <h4>Dynamic discounted pricing</h4>
-                            <p>Passes are sold based on a dynamic pricing model, with prices going as low as 50% off its original prices</p>
                         </div>
                     </div>
                     <!--End of Icon Block-->
