--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
                 <div class="col-3">
                     <div class="section-heading">
-                        <h3>SUCCESS</h3>
+                        <h3>ABOUT</h3>
                         <h2 class="section-title">About ClimbPass</h2>
                         <p class="section-subtitle">ClimbPass is a climbing based platform, for climbers by climbers, and enables climbing to be more
                         accessible to the masses.</p>
@@ -315,7 +315,7 @@
                 <div class="col-3">
 
                     <div class="section-heading">
-                        <h3>TRUST</h3>
+                        <h3>PARTNERS</h3>
                         <h2 class="section-title">Gyms we are partnered with!</h2>
                         <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                             eiusmod
@@ -373,7 +373,7 @@
             <div class="row clearfix">
 
                 <div class="section-heading">
-                    <h3>subtitle here</h3>
+                    <h3>TEAM</h3>
                     <h2 class="section-title">MEET THE TEAM</h2>
                 </div>
 
